--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <nav class="navbar">
         <div class="navbar-center">
             <span class="nav-icon">
-                <i class="fas fa-bars">
+                <i class="fa fa-bars">
                 </i>
             </span>
             <img src="./images/logo.svg" alt="store logo"/>
             <div class="cart-btn">
                 <span class="nav-icon">
-                    <i class="fas fa-cart-plus"></i>
+                    <i class="fa fa-cart-plus"></i>
                 </span>
                 <div class="cart-items">0</div>
             </div>
@@ -63,25 +63,14 @@
     <div class="cart-overlay">
         <div class="cart">
             <span class="close-cart">
-                <i class="fas fa-window-close"></i>
+                <i class="fa fa-window-close"></i>
             </span>
             <h2>your cart</h2>
             <div class="cart-content">
                 <!--cart item-->
-                <div class="cart-item">
-                    <img src="./images/product-1.jpeg" alt="product"/>
-                
-                    <div>
-                        <h4>queen bed</h4>
-                        <h5>ksh 12000</h5>
-                        <span class="remove-item">remove</span>
-                    </div>
-                    <div>
-                        <i class="fas fa-chevron-up"></i>
-                        <p class="item-amount">1</p>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                </div>
+               <!-- <div class="cart-item">
+                    
+                </div>-->
                <!--end of cart item-->
             </div>
             <div class="cart-footer">
@@ -93,8 +82,11 @@
         </div>
     </div>
     <!--end of cart-->
+    <!--contentful-->
+    <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
 
 
+    <!--app js-->
 <script src="app.js"></script>
 </body>
 </html>
