--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Comfy House</title>
+    <title>oramla</title>
     <!--font owesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -19,7 +19,7 @@
                 <i class="fa fa-bars">
                 </i>
             </span>
-            <img src="./images/logo.svg" alt="store logo"/>
+            <!-- <img src="./images/logo.svg" alt="store logo"/> -->
             <div class="cart-btn">
                 <span class="nav-icon">
                     <i class="fa fa-cart-plus"></i>
